--- a/vercel.json
+++ b/vercel.json
@@ -17,8 +17,11 @@
       "dest": "server/src/index.ts"
     },
     {
+      "handle": "filesystem"
+    },
+    {
       "src": "/(.*)",
-      "dest": "client/$1"
+      "dest": "/index.html"
     }
   ]
 }
