--- a/vercel.json
+++ b/vercel.json
@@ -12,8 +12,17 @@
     }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "server/src/index.ts" },
-    { "handle": "filesystem" },
-    { "src": "/(.*)", "dest": "/index.html" }
+    {
+      "src": "/api/(.*)",
+      "dest": "server/src/index.ts"
+    },
+    {
+      "src": "/(.*\\..*)",
+      "dest": "/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
   ]
 }
