--- a/package.json
+++ b/package.json
@@ -3,16 +3,15 @@
   "private": true,
   "scripts": {
     "dev": "concurrently \"npm run dev --prefix client\" \"npm run dev --prefix server\"",
-    "dev:client": "npm run dev --prefix client",
-    "dev:server": "npm run dev --prefix server",
-    "postinstall": "cd client && npm install && cd ../server && npm install && npx prisma generate",
-    "build": "echo 'Building handled by vercel.json'"
+    "install-all": "cd client && npm install && cd ../server && npm install",
+    "build-server": "cd server && npx prisma generate && tsc",
+    "build-client": "cd client && npm run build",
+    "build": "npm run install-all && npm run build-server && npm run build-client"
   },
   "devDependencies": {
     "concurrently": "^9.0.0"
   },
   "dependencies": {
-    "axios": "^1.13.2",
-    "openai": "^4.28.0"
+    "axios": "^1.13.2"
   }
 }
