Fix tsc command not found

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "concurrently \"npm run dev --prefix client\" \"npm run dev --prefix server\"",
     "install-all": "cd client && npm install && cd ../server && npm install",
-    "build-server": "cd server && npx prisma generate && tsc",
+    "build-server": "cd server && npx prisma generate && npx tsc",
     "build-client": "cd client && npm run build",
     "build": "npm run install-all && npm run build-server && npm run build-client"
   },
