--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "googleapis": "^166.0.0",
     "jsonwebtoken": "^9.0.2",
     "openai": "^4.28.0",
     "pg": "^8.16.3",
