--- a/server/package.json
+++ b/server/package.json
@@ -15,10 +15,12 @@
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "googleapis": "^166.0.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "openai": "^4.28.0",
     "pg": "^8.16.3",
     "stripe": "^17.3.1",
@@ -29,6 +31,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.9.0",
     "@types/uuid": "^10.0.0",
     "prisma": "^5.22.0",
